[gd_scene load_steps=66 format=2]

[ext_resource path="res://Enemies/Sprites/Minotaur/minotaur_axe.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Sprites/Minotaur/minotaur_chargeup.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Sprites/Minotaur/minotaur_jab.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Sprites/Minotaur/minotaur_idle.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Sprites/Minotaur/minotaur_death.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Sprites/Minotaur/minotaur_walk.png" type="Texture" id=6]
[ext_resource path="res://Bosses/Minotaur/Minotaur.gd" type="Script" id=7]
[ext_resource path="res://Shaders/flash.tres" type="Shader" id=8]
[ext_resource path="res://Sound Effects/Hit 1.mp3" type="AudioStream" id=9]
[ext_resource path="res://Misc/Health_Bar.tscn" type="PackedScene" id=10]
[ext_resource path="res://Enemies/Enemy_Abstract_Class.tscn" type="PackedScene" id=11]

[sub_resource type="ShaderMaterial" id=55]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 4 )
region = Rect2( 250, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 4 )
region = Rect2( 500, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 4 )
region = Rect2( 750, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 2 )
region = Rect2( 250, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 2 )
region = Rect2( 500, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 2 )
region = Rect2( 750, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 2 )
region = Rect2( 1000, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 2 )
region = Rect2( 1250, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 2 )
region = Rect2( 1500, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 2 )
region = Rect2( 1750, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 2 )
region = Rect2( 2000, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 2 )
region = Rect2( 2250, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 2 )
region = Rect2( 2500, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 6 )
region = Rect2( 250, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 6 )
region = Rect2( 500, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 6 )
region = Rect2( 750, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 1 )
region = Rect2( 250, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 1 )
region = Rect2( 500, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 1 )
region = Rect2( 1000, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 1 )
region = Rect2( 1250, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 3 )
region = Rect2( 250, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 5 )
region = Rect2( 250, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 5 )
region = Rect2( 500, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 5 )
region = Rect2( 750, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 5 )
region = Rect2( 1000, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 5 )
region = Rect2( 1250, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 5 )
region = Rect2( 1500, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 5 )
region = Rect2( 1750, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 5 )
region = Rect2( 2000, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 5 )
region = Rect2( 2250, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 5 )
region = Rect2( 2500, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 5 )
region = Rect2( 2750, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 5 )
region = Rect2( 3000, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 5 )
region = Rect2( 3250, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 5 )
region = Rect2( 3500, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 5 )
region = Rect2( 3750, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 5 )
region = Rect2( 4000, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 5 )
region = Rect2( 4250, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 5 )
region = Rect2( 4500, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 5 )
region = Rect2( 4750, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 5 )
region = Rect2( 5000, 0, 250, 200 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 5 )
region = Rect2( 5250, 0, 250, 200 )

[sub_resource type="SpriteFrames" id=51]
animations = [ {
"frames": [ SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ) ],
"loop": false,
"name": "charge_up",
"speed": 7.0
}, {
"frames": [ SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
}, {
"frames": [ SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ) ],
"loop": true,
"name": "axe_swing",
"speed": 10.0
}, {
"frames": [ SubResource( 99 ), SubResource( 100 ) ],
"loop": true,
"name": "jab",
"speed": 8.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ) ],
"loop": true,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=52]
points = PoolVector2Array( 18, 45, 14, -15, 45, -15, 39, 45 )

[sub_resource type="RectangleShape2D" id=53]
extents = Vector2( 26, 45 )

[sub_resource type="RectangleShape2D" id=54]
extents = Vector2( 43, 13 )

[node name="Minotaur" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 55 )
frames = SubResource( 51 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -25, 0 )
shape = SubResource( 52 )

[node name="Attack_Areas" type="Position2D" parent="."]

[node name="axe_area" type="Area2D" parent="Attack_Areas"]
position = Vector2( -50, 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Areas/axe_area"]
shape = SubResource( 53 )

[node name="jab_area" type="Area2D" parent="Attack_Areas"]
position = Vector2( -17, 27 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Areas/jab_area"]
shape = SubResource( 54 )

[node name="flash_timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Health_Bar" parent="." instance=ExtResource( 10 )]
margin_left = -50.0
margin_top = -38.0
margin_right = 50.0
margin_bottom = -28.0

[node name="Enemy_Abstract_Class" parent="." instance=ExtResource( 11 )]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="flash_timer" to="." method="_on_flash_timer_timeout"]
